--- a/css/style.css
+++ b/css/style.css
@@ -216,6 +216,25 @@ padding-top:25px;
 	color:#bfbfbf;
 	text-decoration: none;
 }
+.chip {
+	color:black;
+	float:right;
+    display: inline-block;
+    padding: 0 25px;
+    height: 50px;
+    font-size: 16px;
+    line-height: 50px;
+    border-radius: 25px;
+    background-color: #f1f1f1;
+}
+
+.chip img {
+    float: left;
+    margin: 0 10px 0 -25px;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+}
 .jumbotron{
 	height:535px;
 	box-shadow:0 0 50px #3F0C1F;
